multilanguage implementado (faltan palabras)

--- a/src/services/localization/locales/en.json
+++ b/src/services/localization/locales/en.json
@@ -14,6 +14,9 @@
     }
   },
   "scenes": {
+    "loading": {
+      "text": "LOADING..."
+    },
     "title": {
       "pressStart": "PRESS SPACE TO START"
     },
