--- a/src/services/localization/locales/es.json
+++ b/src/services/localization/locales/es.json
@@ -14,6 +14,9 @@
     }
   },
   "scenes": {
+    "loading": {
+      "text": "CARGANDO..."
+    },
     "title": {
       "pressStart": "PRESIONA ESPACIO PARA COMENZAR"
     },
