fix: update game over text formatting in Spanish localization

--- a/src/services/localization/locales/es.json
+++ b/src/services/localization/locales/es.json
@@ -96,7 +96,7 @@
       }
     },
     "results": {
-      "gameOver": "¡PARTIDA TERMINADA!",
+      "gameOver": "¡PARTIDA\nTERMINADA!",
       "summary": "Nivel alcanzado: {level}\nPuntuación final: {score}",
       "newHighScore": "¡NUEVO HIGH SCORE!",
       "leaderboard": "MEJORES PUNTAJES",
